# AWE_Workbench

./: .gitignore  LICENSE  MANIFEST.in  README.md  SHORTREADME.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
awe_workbench/: pipeline.py
awe_workbench/setup/: data.py
awe_workbench/web/: parserServer.py  startServers.py  websocketClient.py
examples/: README.md  argument_analysis.py  barenlp.py  batch_summary.py  client.py  example_lib.py  kaggle_essay.py  kaggle_essay2.py  multiple_essay_report.py  narrative_analysis.py  process_one_argument_essay.py  process_one_narrative.py  standalone_parse.py
examples/essays/: censorship1.txt  censorship10.txt  censorship11.txt  censorship12.txt  censorship13.txt  censorship14.txt  censorship15.txt  censorship16.txt  censorship17.txt  censorship18.txt  censorship19.txt  censorship2.txt  censorship20.txt  censorship21.txt  (+19 more)
installation/: AWEInstallScript.sh  AWEInstallScript.sh~  AddAWEToVENV.sh  conda_install.sh
scripts/: exerciseServerFunctions.py  process_criterion_essays.py  process_sample_criterion_essays.py  startServers.py  testmultipledocs.py  testoncriterionsample.py  testonedoc.py
tests/: README.md  test_awe_nlp.py  test_lexical_clusters.py  test_lexical_features.py  test_prompt_specific_features.py  test_server_api.py  test_syntax_discourse_features.py  test_viewpoint_perspective_features.py  test_viewpoint_perspective_features2.py  test_viewpoint_perspective_features3.py  test_viewpoint_perspective_features4.py  test_viewpoint_perspective_features5.py  test_viewpoint_perspective_features6.py  test_viewpoint_perspective_features7.py
(+65 files in other folders)
