[metadata]
name = awe-workbench
version = 1.0.0
description = NLP analysis for automated writing evaluation, based on spacy, Holmes Extractor, and other open source systems
long_description = file: SHORTREADME.md
long_description_content_type = text/markdown
url = blank
author = Paul Douglas Deane, Educational Testing Service
author_email = pdeane@alliteration.net
license = agpl-3.0
keywords= nlp, awe, automated writing extraction, information-extraction, spacy, spacy-extension, python, machine-learning, ontology, semantics
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Computational Linguists
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Automated Writing Evaluation

[options]
include_package_data = True
packages = find:
python_requires >=3.9
install_requires =
  holmes_extractor
  pylt_classifier
  aggr_spellcorrect
  awe_components
  awe_lexica
  websockets
  websocket-client
  aiohttp
  requests
  streamlit
  st-annotated-text
  names
  openpyxl

[options.package_data]
* = *.cfg, *.csv, *.json, *.txt

